--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ ul > li {
  list-style: none;
     display: inline-block;
     background-color: antiquewhite;
-/*    padding: 2px;*/
+    padding: 2px;
+/*    margin-right:20px; */
     
 }
 
@@ -27,6 +28,8 @@ header > div:nth-child(3) {
 }
 
 
+
+/*this helps me layout the pagess*/
 
 div {
     border: 5px dotted red;
