--- a/style.css
+++ b/style.css
@@ -1,25 +1,74 @@
 * {
     box-sizing: border-box;
-     
-   
+}
+
+@import url('https://fonts.googleapis.com/css?family=Lobster|Roboto&display=swap');
+
+
+/*google font */
+
+
+/*
+    font-family: 'Lobster', cursive;
+    font-family: 'Roboto', sans-serif;
+*/
+
+/* Coolors Exported Palette - coolors.co/247ba0-70c1b3-b2dbbf-f3ffbd-ff1654 */
+
+/* HSL */
+/*
+$color1: hsla(198%, 63%, 38%, 1);
+$color2: hsla(170%, 40%, 60%, 1);
+$color3: hsla(139%, 36%, 78%, 1);
+$color4: hsla(71%, 100%, 87%, 1);
+$color5: hsla(344%, 100%, 54%, 1);
+*/
+
+/* RGB */
+/*
+$color1: rgba(36, 123, 160, 1);
+$color2: rgba(112, 193, 179, 1);
+$color3: rgba(178, 219, 191, 1);
+$color4: rgba(243, 255, 189, 1);
+$color5: rgba(255, 22, 84, 1);
+*/
+
+
+
+body {
+    background-color: #f3ffbd;
+
+}
+
+
+nav {
+    background-color:
 }
 
 header {
     display: flex;
-   
+    background-color: rgba(36, 123, 160, .40);
+    justify-content: flex-start;
+    font-family: 'Lobster', cursive;
+    font-size: 30px;
 }
 
 h1 {
     text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+a {
+    color: rgba(243, 255, 189, 1);
 }
 
 ul > li {
- list-style: none;
+    list-style: none;
     display: inline-block;
-    background-color: antiquewhite;
+    background: rgba(255, 22, 84, .5);
     padding: 2px;
-/*    margin-right:20px; */
-    
+    /*    margin-left:20px; */
+    margin: auto;
 }
 
 header > div:nth-child(3) {
@@ -32,7 +81,7 @@ header > div:nth-child(3) {
 /*this helps me layout the pagess*/
 
 div {
-    border: 5px dotted red;
+    border: 5px dashed black;
 }
 
 /*
@@ -44,5 +93,9 @@ div {
 
 form > label {
     display: flex;
-    
+
+}
+
+footer div {
+    background-color: rgba(36, 123, 160, .5);
 }
